<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/select_color"
    tools:context=".activities.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/spin_kit"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="33dp">

        <com.github.florent37.shapeofview.shapes.ArcView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:elevation="4dp"
            app:shape_arc_cropDirection="outside"
            app:shape_arc_height="50dp"
            app:shape_arc_position="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/custom_theme_color"
                android:gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:font_name="HNBold"
                    android:text="@string/welcome"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_logo"
                    android:src="@drawable/hb_white_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:font_name="HNBold"
                    android:gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    app:font_name="HNRegular"
                    android:text="@string/you_deserve_the_best_partner"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </com.github.florent37.shapeofview.shapes.ArcView>




        <!--   <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/taking_your_relationship_to_the_next_level"
            android:textColor="@color/white"
            android:textSize="16sp" />-->

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            app:font_name="HNRegular"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/v1_0"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.ThreeBounce"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:visibility="visible"
        app:SpinKit_Color="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>