<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/select_color"
    tools:context=".activities.UserLoginActivity">
    <com.github.florent37.shapeofview.shapes.ArcView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:elevation="4dp"
        app:shape_arc_cropDirection="outside"
        app:shape_arc_height="50dp"
        app:shape_arc_position="bottom"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/logo_honeybunch" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:font_name="HNBold"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/select_color"
                android:textSize="25sp"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                app:font_name="HNRegular"
                android:text="You deserve the best partner"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />


        </LinearLayout>

    </com.github.florent37.shapeofview.shapes.ArcView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Welcome"
            app:font_name="HNBold"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <!-- <com.google.android.gms.common.SignInButton
                android:id="@+id/signInButton1"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_privacy"
                android:layout_centerHorizontal="true"
                android:visibility="gone" />-->

        <TextView
            android:id="@+id/signInButton"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_wtout_bg"
            android:padding="10dp"
            android:text="@string/signin_with_google"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/custom_theme_color"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/google"
            app:font_name="HNBold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            app:font_name="HNRegular"
            android:text="@string/textprviacy"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/white"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:padding="6dp"
        android:visibility="visible"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/privacypolicy"
            app:font_name="HNRegular"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvTermCondition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            app:font_name="HNRegular"
            android:text="@string/termofservices"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>